--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
+  table_calendar: ^3.0.9
+  intl: ^0.18.1
+  cloud_firestore: ^4.14.0
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
