--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.18.1
   cloud_firestore: ^4.14.0
   flutter_datetime_picker: ^1.5.1
+  syncfusion_flutter_calendar: ^24.1.47
 
 dev_dependencies:
   flutter_test:
