--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   cloud_firestore: ^4.14.0
   flutter_datetime_picker: ^1.5.1
   syncfusion_flutter_calendar: ^24.1.47
+  syncfusion_localizations: ^24.1.47
+
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
