--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,15 +38,13 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
-  table_calendar: ^3.0.9
   intl: ^0.18.1
   cloud_firestore: ^4.14.0
-  flutter_datetime_picker: ^1.5.1
-  syncfusion_flutter_calendar: ^24.1.47
-  syncfusion_localizations: ^24.1.47
 
   flutter_localizations:
     sdk: flutter
+  booking_calendar: ^1.1.10
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +56,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
