--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,10 @@ dependencies:
   google_sign_in: ^6.2.1
   intl: ^0.18.1
   cloud_firestore: ^4.14.0
+  syncfusion_flutter_calendar:
 
   flutter_localizations:
     sdk: flutter
-  booking_calendar: ^1.1.10
   json_annotation: ^4.8.1
 
 dev_dependencies:
