--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,16 @@ dependencies:
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
   intl: ^0.18.1
-  cloud_firestore: ^4.14.0
+  cloud_firestore: ^4.15.5
   syncfusion_flutter_calendar:
+  equatable: ^2.0.5
+  hooks_riverpod: ^2.4.10
 
   flutter_localizations:
     sdk: flutter
   json_annotation: ^4.8.1
+  flutter_riverpod: ^2.4.10
+  riverpod_annotation: ^2.3.4
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +62,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
+  riverpod_generator: ^2.3.11
+  custom_lint: ^0.6.2
+  riverpod_lint: ^2.3.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
