--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_riverpod: ^2.4.10
   riverpod_annotation: ^2.3.4
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
