--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
-  intl: ^0.18.1
+  intl: 0.18.1
   cloud_firestore: ^4.15.5
-  syncfusion_flutter_calendar:
   equatable: ^2.0.5
   hooks_riverpod: ^2.4.10
 
@@ -50,6 +49,7 @@ dependencies:
   flutter_riverpod: ^2.4.10
   riverpod_annotation: ^2.3.4
   email_validator: ^2.1.17
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
