--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   equatable: ^2.0.5
   hooks_riverpod: ^2.4.10
   google_fonts: ^6.2.0
+  flutter_switch: ^0.3.2
 
   flutter_localizations:
     sdk: flutter
