edit pubspec y un boton

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_svg: ^2.0.10+1
   shared_preferences: ^2.2.2
+  showcaseview: ^2.0.3
 
 dev_dependencies:
   flutter_test:
