coachmark tutorial agregado - no anda bien

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,23 +38,22 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
-  intl: 0.18.1
-  cloud_firestore: ^4.15.5
+  cloud_firestore: ^4.15.9
   equatable: ^2.0.5
   hooks_riverpod: ^2.4.10
   google_fonts: ^6.2.0
   flutter_switch: ^0.3.2
 
-  flutter_localizations:
-    sdk: flutter
   json_annotation: ^4.8.1
   flutter_riverpod: ^2.4.10
   riverpod_annotation: ^2.3.4
   email_validator: ^2.1.17
-  table_calendar: ^3.0.9
+  table_calendar: ^3.1.0
   flutter_svg: ^2.0.10+1
   shared_preferences: ^2.2.2
-  showcaseview: ^2.0.3
+  tutorial_coach_mark: ^1.2.11
+  intl: ^0.19.0
+  lints: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,12 +64,12 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
   riverpod_generator: ^2.3.11
   custom_lint: ^0.6.2
   riverpod_lint: ^2.3.9
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
