--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,9 +51,9 @@ dependencies:
   table_calendar: ^3.1.0
   flutter_svg: ^2.0.10+1
   shared_preferences: ^2.2.2
-  tutorial_coach_mark: ^1.2.11
   intl: ^0.19.0
   lints: ^3.0.0
+  showcaseview: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -98,6 +98,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Airyin
+      fonts:
+        - asset: lib/assets/fonts/Airyin.otf
   # fonts:
   #   - family: Schyler
   #     fonts:
